fix: css to set position relative and z-index on main container

--- a/packages/org-chart/src/index.css
+++ b/packages/org-chart/src/index.css
@@ -6,6 +6,11 @@
   --row-column-gap: 80px;
 }
 
+.och-org-chart-main-container {
+  position: relative;
+  z-index: 1;
+}
+
 /* TOC styles */
 .och-toc-box {
   font-size: 16px;
